--- a/100_Numpy_exercises_no_solution.ipynb
+++ b/100_Numpy_exercises_no_solution.ipynb
@@ -865,11 +865,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 4]),)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np."
+    "a = np.array([1,2,0,0,4,0])\n",
+    "for x in range(0,len(a)-1): \n",
+    "    if a[x]!=0:\n",
+    "        print(x)\n",
+    "        \n",
+    "\n",
+    "nz = np.nonzero([1,2,0,0,4,0])\n",
+    "nz"
    ]
   },
   {
@@ -881,10 +908,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "I = np.zeros(9).reshape(3,3)\n",
+    "for col in range(0,3):\n",
+    "    I[col,col] = 1\n",
+    "print(I)\n",
+    "\n",
+    "Z = np.eye(3)\n",
+    "print(Z)"
+   ]
   },
   {
    "cell_type": "markdown",
