--- a/100_Numpy_exercises_no_solution.ipynb
+++ b/100_Numpy_exercises_no_solution.ipynb
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -816,14 +816,14 @@
        "array([-6, -5, 10,  9,  5,  2])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.array([2,5,9,10,-5,-6])\n",
-    "b = a[a.size::-1]\n",
+    "b = a[::-1]\n",
     "b"
    ]
   },
@@ -943,10 +943,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.92904512, 0.13819591, 0.92681436],\n",
+       "        [0.37102648, 0.68258682, 0.04521233],\n",
+       "        [0.56383913, 0.61448184, 0.95069129]],\n",
+       "\n",
+       "       [[0.99908741, 0.17486297, 0.25185561],\n",
+       "        [0.48843336, 0.90230023, 0.91901981],\n",
+       "        [0.77427798, 0.23193223, 0.58863639]],\n",
+       "\n",
+       "       [[0.91137497, 0.20409672, 0.14187672],\n",
+       "        [0.52230875, 0.05526347, 0.79678107],\n",
+       "        [0.93460809, 0.84880442, 0.35881227]]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(3,3,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -957,10 +980,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.011753363460161204\n",
+      "0.9994061316543167\n",
+      "0.011753363460161204 0.9994061316543167\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.rand(10,10)\n",
+    "#print(a)\n",
+    "print(np.amin(a))\n",
+    "print(np.amax(a))\n",
+    "\n",
+    "a_min, a_max = a.min(), a.max()\n",
+    "print(a.min(), a.max())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -971,10 +1012,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5303577665778997\n",
+      "0.5303577665778997\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.rand(30)\n",
+    "mean_a = np.sum(a)/a.size\n",
+    "print(mean_a)\n",
+    "print(a.mean())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -985,10 +1040,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.zeros(25).reshape(5,5)\n",
+    "\n",
+    "a.shape\n",
+    "(row, col)=a.shape\n",
+    "for i in [0,row-1]:\n",
+    "    for j in range(col):\n",
+    "       a[i,j] = 1\n",
+    "for j in [0,col-1]:\n",
+    "    for i in range(row):\n",
+    "       a[i,j] = 1\n",
+    "\n",
+    "print(a)        \n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -999,10 +1082,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1.,  2.,  3.,  4.,  0.],\n",
+       "       [ 0.,  5.,  6.,  7.,  8.,  9.,  0.],\n",
+       "       [ 0., 10., 11., 12., 13., 14.,  0.],\n",
+       "       [ 0., 15., 16., 17., 18., 19.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.arange(20).reshape(4,5)\n",
+    "row, col = a.shape\n",
+    "b = np.zeros(row).reshape(row,1)\n",
+    "z = np.concatenate((b,a,b), axis = 1)\n",
+    "c = np.zeros(col+2).reshape(1,col+2)\n",
+    "z = np.concatenate((c,z,c),axis = 0)\n",
+    "z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1027,10 +1135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1041,10 +1162,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 2., 0., 0., 0.],\n",
+       "       [0., 0., 3., 0., 0.],\n",
+       "       [0., 0., 0., 4., 0.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " a = np.zeros(25).reshape(5,5)\n",
+    "row,col = a.shape\n",
+    "for i in range(col-1):\n",
+    "    a[i+1,i] = i+1\n",
+    "a\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
