--- a/100_Numpy_exercises_no_solution.ipynb
+++ b/100_Numpy_exercises_no_solution.ipynb
@@ -1070,6 +1070,7 @@
     "\n",
     "print(a)        \n",
     "\n",
+    "###or\n",
     "\n"
    ]
   },
@@ -1135,22 +1136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "False\n",
+      "False\n",
+      "nan\n",
+      "True\n",
+      "False\n",
+      "0.30000000000000004\n"
+     ]
     }
    ],
    "source": [
-    "True"
+    "print(0*np.nan)\n",
+    "print(np.nan==np.nan)\n",
+    "print(np.inf>np.nan)\n",
+    "print(np.nan-np.nan)\n",
+    "print(np.nan in set([np.nan]))\n",
+    "print(0.3==(3.0*0.1))\n",
+    "print(3.0*0.1)\n"
    ]
   },
   {
@@ -1198,10 +1208,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.zeros(64).reshape(8,8)\n",
+    "#put 1's in rows alternatively every 2nd column  starting from row 1\n",
+    "a[1::2,::2] = 1\n",
+    "a[::2,1::2]=1\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1212,10 +1246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 5, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.unravel_index(99,(6,7,8)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1226,10 +1270,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[0,1],[1,0]])\n",
+    "b = np.tile(a,[4,4])\n",
+    "b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1240,10 +1306,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.51200847,  0.70682253, -1.5815394 , -0.05061828,  0.50894258],\n",
+       "       [ 0.90592761,  1.60143818, -1.24403849,  0.21170233,  1.23104252],\n",
+       "       [-1.78954589,  0.93270728,  0.38344138,  1.26697314, -0.80378256],\n",
+       "       [-1.25388257,  1.08799666, -0.75389354, -0.76590224, -1.38709777],\n",
+       "       [ 0.0375589 , -0.7976503 , -0.0536754 ,  0.10839171, -0.01332685]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.random((5,5))\n",
+    "b = (a-np.mean(a))/np.std(a)\n",
+    "b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1254,10 +1339,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "color = np.dtype([(\"r\",np.uint8),(\"g\",np.uint8),(\"b\", np.uint8),(\"a\",np.uint8)])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1268,10 +1355,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 10  13]\n",
+      " [ 28  40]\n",
+      " [ 46  67]\n",
+      " [ 64  94]\n",
+      " [ 82 121]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.arange(15).reshape(5,3)\n",
+    "b = np.arange(6).reshape(3,2)\n",
+    "c = np.dot(a,b)\n",
+    "print(c)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1282,10 +1389,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3, -4, -5, -6, -7,  8,  9, 10, 11])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(12)\n",
+    "a[(a>3) & (a < 8)] = -a[(a>3) & (a < 8)]\n",
+    "a\n",
+    "#or \n",
+    "a[(a>3) & (a < 8)] *= -1\n",
+    "a\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
